vacantes validacion , minimo de participantes